src/main/java/com/example/recruit_page_wwy/_core/error/ex/ExceptionApi403.java
package com.example.recruit_page_wwy._core.error.ex;

public class ExceptionApi403 extends RuntimeException {
    public ExceptionApi403(String message) {
        super(message);
    }
}
